chore: enhances security and architecture
Improves the application's security architecture by adding origin validation, rate limiting, and CSRF protection.

Introduces a two-tier architecture, separating public content (server-side rendering) from admin management (private API).

Updates environment variables, documentation, and file structure to reflect these changes.

Signed-off-by: Lionel H <me@nullbyte.be>

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ai-sdk/react": "^2.0.28",
     "@ariakit/react": "^0.4.19",
     "@auth/prisma-adapter": "^2.11.0",
+    "@edge-csrf/nextjs": "^2.5.2",
     "@emoji-mart/data": "^1.2.1",
     "@faker-js/faker": "^9.9.0",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
@@ -82,6 +83,8 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@udecode/cn": "^49.0.15",
     "@udecode/plate-markdown": "^48.0.2",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/blob": "^2.0.0",
     "@vercel/speed-insights": "^1.2.0",
